<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF6FE"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addAct_nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:layout_marginStart="5sp"
            />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_nombre"
            android:layout_marginBottom="15sp"
            android:background="#80FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/addAct_nombrehint"
            android:inputType="text"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/priority"
            android:layout_below="@id/et_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addAct_priority"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="18sp"
            android:layout_marginStart="5sp"
            />

        <Spinner
            android:id="@+id/spinner_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/priority"
            android:layout_marginBottom="15sp"
            android:layout_toEndOf="@id/priority"> </Spinner>

        <TextView
            android:id="@+id/t_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/priority"
            android:text="@string/addAct_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:layout_marginBottom="15sp"
            android:layout_marginStart="5sp"
            />

        <Button
            android:id="@+id/b_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_date"
            android:layout_marginStart="20sp"
            android:text="@string/addAct_btn_date"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5sp"
            android:layout_marginEnd="4sp"
            />

        <Button
            android:id="@+id/b_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/b_date"
            android:layout_marginStart="20sp"
            android:text="@string/addAct_btn_time"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="25sp"
            />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/b_date"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/b_date"
            android:background="#80FFFFFF"
            android:backgroundTint="#D8FFFFFF"
            android:clickable="false"
            android:hint="@string/addAct_datehint"
            android:inputType="date" />

        <EditText
            android:id="@+id/et_time"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/b_time"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="25sp"
            android:layout_toEndOf="@id/b_time"
            android:background="#80FFFFFF"
            android:backgroundTint="#D8FFFFFF"
            android:clickable="false"
            android:hint="@string/addAct_timehint"
            android:inputType="date" />


        <Button
            android:id="@+id/b_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_time"
            android:layout_centerInParent="true"
            android:text="@string/addAct_btn_submit"
            android:onClick="agendarActividad"
            />
    </RelativeLayout>
</ScrollView>