<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".whatToDo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="60dp"
            android:background="#1E7563"
            android:text="@string/what_to_do"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="0dp"
            android:background="#A39A9A"
            android:text="@string/informative_text"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="0dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="210dp"
            android:layout_marginTop="0dp">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="RadioButton" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="100dp"
            android:text="@string/btnaccept" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="100dp"
            android:text="@string/btncancel" />
    </RelativeLayout>

</FrameLayout>