<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment01">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/history_tittle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#80FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_tittle"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/history_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"
            android:text="@string/history_tittle"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="70dp"
            android:background="#B3FFFFFF"
            android:text="@string/points_earned"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/puntaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_Points"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="#B3FFFFFF"
            android:text="@string/points"
            android:textColor="#FF0000"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>
